2005-11-11 François Proulx <francois.proulx@gmail.com>
	* Fixed Admin hotspot location map
	* Take note : Google Maps updated their API key system, so that you simply need to register a key for the whole domain.
	  ie. one key for http://auth.abc.org will work even in sub-directories
	* Changed the Content classes structure to make them "pluggable" more easily.
	  as requested during last developpers meeting
	* node_list.php now support column sorting, node_id are naturally sorted (numerical order, alphabetic)
	* Added 2-dimensionnal natural sort algorithm to Utils class
	* fixed Node::getSelectNodeUI to naturally sort by node_id
	* Improved Flickr content class
	* Modified Flickr database schema
	* Modified CSS look and feel
	  
2005-11-08 Philippe April  <philippe@ilesansfil.org>
	* Put a note to mention the roles of users in the logged in users list
	* Fixed online users link to statistics
	  
2005-11-01 Max Horváth <max.horvath@maxspot.de>
	* added german translation
	* modified gen.sh to include geocoder and statistics classes for the translation
	  file generation
	* modified hotspot status page to allow translations of every string
	* modified node list page to allow translations of every string
	* modified FAQ page to allow translations of every string
	* fixed bug in FAQ page which caused the Safari browser to display very large
	  text
	* modified online users page in administration to allow translations of every
	  string
	* added Phlickr directory to /lib

2005-10-25 Francois Proulx <francois.proulx@gmail.com>
	* /classes/DateTime.php : First iteration of DateTime abstraction class
	* Basic support for datetime input field.
	* TODO : Overhaul with full-fledged datetime selector...
	
2005-10-25 Francois Proulx <francois.proulx@gmail.com>
	* AuthenticatorRadius : Fixed legacy variable misuse
	
2005-10-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* AuthenticatorRadius:  Fix bug reported by kouete, by inspection.  Fix not actually tested. 