@@ -709,7 +709,9 @@ function update_schema()
 		{
 			echo "<h2>Preparing SQL statements to update schema to version  $new_schema_version</h2>\n";
 			$sql .= "\n\nUPDATE schema_info SET value='$new_schema_version' WHERE tag='schema_version';\n";
-			$sql .= "ALTER TABLE flickr_photostream ADD COLUMN photo_display_mode text NOT NULL DEFAULT 'PDM_GRID'::text;";
+			$sql .= "ALTER TABLE flickr_photostream ADD COLUMN photo_display_mode text;";
+			$sql .= "ALTER TABLE flickr_photostream ALTER COLUMN photo_display_mode SET DEFAULT 'PDM_GRID'::text;\n";
+			$sql .= "ALTER TABLE flickr_photostream ALTER COLUMN photo_display_mode SET NOT NULL;\n";
 		}
 		
 		$db->ExecSqlUpdate("BEGIN;\n$sql\nCOMMIT;\nVACUUM ANALYZE;\n", true);
